Stop stretching embedded images in editor preview
Fixes #14

--- a/scss/common/_reply.scss
+++ b/scss/common/_reply.scss
@@ -241,7 +241,7 @@
 
     img:not(.avatar):not(.emoji):not(.site-icon):not(.thumbnail) {
       height: auto;
-      width: 100%;
+      max-width: 100%;
     }
   }
 
